--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -20,11 +20,11 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="320dp"
-            android:layout_height="240dp"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
-            android:background="@drawable/ic_launcher_background"
+            android:src="@drawable/select"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
